--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -113,7 +113,7 @@
         obj[item] = 0;
       }
       obj[item]++;
-      // console.log(item);
+      console.log(item);
       return obj;
     }, {});
 
